# NRMP_Simulated

./: .gitignore  CLAUDE.md  Dockerfile  IDEAS.md  TODO.md  entrypoint.sh  manage.py  pyproject.toml  ruff.toml
.junie/: guidelines.md
NRMP_Simulated/: asgi.py  settings.py  urls.py  wsgi.py
nrmps/: admin.py  apps.py  forms.py  models.py  simulation_engine.py  tests.py  urls.py  views.py
nrmps/migrations/: 0001_initial.py  0002_alter_simulationconfig_school_meta_preference.py  0002_interview_schools_rank_of_student_and_more.py  0003_alter_simulationconfig_applicant_meta_preference.py  0003_remove_simulationconfig_description_and_more.py  0004_alter_simulationconfig_applicant_meta_preference_stddev_and_more.py  0004_simulation_owner.py  0005_alter_school_meta_stddev_and_more.py  0005_alter_simulationconfig_number_of_applicants_and_more.py  0006_rename_schools_rank_of_student_interview_schools_post_rank_of_student_and_more.py  0007_interview_school_accepted_interview_school_invited_and_more.py  0008_remove_student_schools_signaled.py  0009_interview_student_signal_school_meta_stddev_and_more.py  0010_rename_applicants_interview_limit_simulationconfig_applicant_interview_limit_and_more.py  0011_remove_simulationconfig_applicant_score_meta.py  0012_alter_simulationconfig_applicant_interview_limit_and_more.py  0013_remove_interview_school_accepted_and_more.py  0014_remove_simulationconfig_applicant_meta_scores.py  0015_remove_simulationconfig_school_meta_scores.py  (+2 more)
nrmps/templatetags/: bootstrap5.py
static/: .gitkeep
templates/: base.html  base.html.bak
(+18 files in other folders)
