[project]
name = "nrmp-simulated"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "django>=5.2.5",
    "django-bootstrap5>=25.2",
    "django-crispy-forms>=2.4",
    "django-htmx>=1.23.2",
    "logfire[django]>=4.3.6",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.0.0",
    "django-reset-migrations>=0.4.0",
    "django-stubs>=5.2.2",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
    "ty>=0.0.1a19",
]
